--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "gulp": "^3.8.8",
     "gulp-less": "^1.3.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-concat": "^2.4.2",
+    "gulp-uglify": "^1.0.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
