--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.1",
-    "uikit": "~2.11.1"
+    "jquery": "2.*",
+    "uikit": "2.*"
   }
 }
