--- a/package.json
+++ b/package.json
@@ -3,22 +3,17 @@
   "version": "0.1.0",
   "description": "A [WordPress](http://www.wordpress.org) starter theme for developers using the frontend framework [UIkit](http://www.getuikit.com).",
   "main": "gulpfile.js",
-  "dependencies": {
-    "gulp": "^3.8.8",
-    "gulp-less": "^1.3.6"
-  },
   "devDependencies": {
+    "gulp": "^3.8.8",
+    "gulp-less": "^1.3.6",
     "gulp-concat": "^2.4.2",
     "gulp-uglify": "^1.0.2"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/nstaeger/WordPress-UIkit-Starter-Theme.git"
   },
-  "author": "",
+  "author": "nstaeger",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/nstaeger/WordPress-UIkit-Starter-Theme/issues"
