--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A [WordPress](http://www.wordpress.org) starter theme for developers using the frontend framework [UIkit](http://www.getuikit.com).",
   "main": "gulpfile.js",
   "devDependencies": {
+    "del": "^1.1.1",
     "gulp": "^3.8.8",
-    "gulp-less": "^1.3.6",
     "gulp-concat": "^2.4.2",
+    "gulp-less": "^1.3.6",
     "gulp-uglify": "^1.0.2"
   },
   "repository": {
